# spanish-vibes

./: .dockerignore  .gitignore  AGENTS.md  BACKLOG.md  DEPLOY.md  DESIGN_IDEAS.md  Dockerfile  ENGINE_OVERVIEW.md  PROMPT.md  PROMPT_ADAPTIVE_DIFFICULTY.md  PROMPT_CONVERSATION_LOOP_FIX.md  PROMPT_CONVERSATION_TYPES.md  PROMPT_DEV_TOOLS.md  PROMPT_DEV_TOOLS_FIX.md  PROMPT_ENJOYMENT.md  PROMPT_EVALUATION.md  PROMPT_INTEREST_TRACKING_FIX.md  PROMPT_MEMORY.md  PROMPT_NEW_CARD_TYPES.md  PROMPT_PERSONAS.md  PROMPT_PLACEMENT.md  PROMPT_VOICE.md  PROMPT_WORD_INTRO_FIX.md  PROMPT_WORD_SEED.md  PROMPT_WORD_TRACKING.md  README.md  SpanishVibes.session.sql  main.py  pyproject.toml
book/: full.md  research-report.md
data/: concepts.yaml  es_en_dictionary.json  fill_blanks.json  prompts.yaml  seed_words.json  spanish_vibes.db
docs/: AGENT_ARCHITECTURE.md  context.md  design-notes.md  implementation-plan.md  prompt-conversation-engine-v2.md  prompt-tappable-words-english-fallback.md
templates/: base.html  concepts.html  decks.html  flow.html  flow_interests.html  flow_onboarding.html  flow_placement.html  flow_placement_results.html  flow_stats.html  flow_words.html  index.html  lesson.html  lessons.html  login.html  practice.html  quiz.html  signup.html
tests/: test_bkt.py  test_concepts.py  test_content_source.py  test_conversation.py  test_conversation_types.py  test_evaluation.py  test_flow.py  test_flow_ai_themed.py  test_flow_db.py  test_flow_routes.py  test_flow_signal.py  test_interest.py  test_lesson_cache.py  test_lessons.py  test_lexicon.py  test_personas.py  (+4 more)
(+160 files in other folders)
