[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "spanish-vibes"
version = "0.1.0"
description = "Tiny A2 Spanish spaced-repetition trainer."
readme = "README.md"
authors = [
    { name = "Artem Zhivilo" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "PyYAML>=6.0",
    "markdown>=3.5",
    "openai>=1.0",
]

[project.scripts]
spanish-vibes = "spanish_vibes.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spanish_vibes"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.1",
    "ruff>=0.3",
]
